# painminer

./: .gitignore  Makefile  README.md  pyproject.toml  sample_config.yaml
painminer/: __init__.py  __main__.py  api.py  cache.py  cli.py  cluster.py  config.py  core_filter.py  extract.py  ideas.py  models.py  network.py  output.py  reddit_client.py  utils.py
tests/: __init__.py  test_cluster.py  test_core_filter.py  test_extract.py
web/: README.md  package.json
web/src/app/: layout.tsx
web/src/components/: analysis-form.tsx  dashboard.tsx  job-progress.tsx  jobs-list.tsx  providers.tsx  results-view.tsx  status-bar.tsx
